--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "axios": "^1.6.0",
     "dotenv": "^16.3.1",
-    "telegraf": "^4.12.2"
+    "telegraf": "^4.12.2",
+    "express": "^4.18.2"
   }
 }
