--- a/package.json
+++ b/package.json
@@ -6,6 +6,6 @@
   "dependencies": {
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
-    "node-telegram-bot-api": "^0.61.0"
+    "telegraf": "^4.12.2"
   }
 }
