--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "main": "bot.js",
   "type": "module",
   "dependencies": {
+    "axios": "^1.6.0",
     "dotenv": "^16.3.1",
-    "express": "^4.18.2",
+    "express": "^4.21.1",
     "telegraf": "^4.12.2"
   }
 }
