--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-TELEGRAM_BOT_TOKEN=твой_бот_токен
-OPENAI_API_KEY=твой_openai_ключ
+TELEGRAM_TOKEN=ТВОЙ_ТОКЕН_ОТ_BOTFATHER
+NEWS_RSS_URL=https://lenta.ru/rss/news
