--- a/package.json
+++ b/package.json
@@ -3,10 +3,12 @@
   "version": "1.0.0",
   "main": "bot.js",
   "type": "module",
+  "scripts": {
+    "start": "node bot.js"
+  },
   "dependencies": {
-    "axios": "^1.6.0",
     "dotenv": "^16.3.1",
-    "express": "^4.21.1",
-    "telegraf": "^4.12.2"
+    "express": "^4.19.2",
+    "telegraf": "^4.16.3"
   }
 }
